--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '2.7.14'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'com.google.cloud.tools.jib' version '3.4.0'
 }
 
 group = 'com.pipeline'
@@ -17,12 +18,38 @@ configurations {
 	}
 }
 
+jib {
+	to {
+		image = "justuser0129/sva"
+		tags = [ "latest" ]
+		auth {
+			username = project.findProperty('DockerUsername')
+			password = project.findProperty('DockerPassword')
+		}
+	}
+	from {
+		image = "eclipse-temurin:11-jre"
+		auth {
+			username = project.findProperty('DockerUsername')
+			password = project.findProperty('DockerPassword')
+		}
+	}
+	container {
+		creationTime = "USE_CURRENT_TIMESTAMP"
+		jvmFlags = ["-Xms128m", "-Xmx128m", '-Dfile.encoding=UTF-8']
+		ports = ['8080']
+	}
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.15'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
